--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   google_fonts: ^6.1.0
   gap: ^3.0.1
   rounded_loading_button: ^2.1.0
+  custom_navigation_bar: ^0.8.2
+  flutter_vector_icons: ^2.0.0
 
 dev_dependencies:
   flutter_test:
