--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   custom_navigation_bar: ^0.8.2
   flutter_vector_icons: ^2.0.0
   timeago: ^3.5.0
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
