--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   flutter_vector_icons: ^2.0.0
   timeago: ^3.5.0
   carousel_slider: ^4.2.1
+  firebase_auth: ^4.10.1
+  firebase_core: ^2.17.0
 
 dev_dependencies:
   flutter_test:
