--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   carousel_slider: ^4.2.1
   firebase_auth: ^4.10.1
   firebase_core: ^2.17.0
+  shared_preferences: ^2.2.2
+  cloud_firestore: ^4.9.3
 
 dev_dependencies:
   flutter_test:
